# Car-price

./: ML.ipynb  Principal.ipynb  README.md  meilleur_modele_knn.pkl  pyproject.toml  requirements.txt  resultats_modeles.csv
Machine learning/: machine_learn.py  selection_train.py
Machine.Learning/: machine_learn.py  selection_train.py
Modeles/: gradient_boosting_model.pkl  kneighbors_model.pkl  mlp_model.pkl  ridge_model.pkl  svr_model.pkl
Notebooks/: EDA.ipynb  ML.ipynb
Vehicles_scraping/: README.md  main.py
Vehicles_scraping/Scraper/: VehicleScraper.py  scraper_methods.py
Vehicles_scraping/data/: vehicules.csv  vehicules.json
cleaning_data/: cleaning.py  manual_cleaning.ipynb
machine_learning/: README.md  price_prediction.py  selection_train.py  train_models_utils.py
