[project]
name = "car-price"
version = "0.1.0"
description = "\"Projet académique de prédiction du prix des voitures\""
authors = [
    {name = "Nazif96",email = "afolabinazif96@gmail.com"}
]
license = {text = "\"MIT\""}
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
